[package]
name = "example_nth_power"
version = "0.1.0"
edition = "2021"

[lib]
name = "example"
path = "src/lib.rs"
bench = false
doctest = false


[dependencies]
halo2_proofs = { git = "https://github.com/zcash/halo2.git", rev = "a898d65ae3ad3d41987666f6a03cfc15edae01c4"}
halo2 = { package = "halo2_proofs", git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_04_20" }
rand = "0.8"
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "example1"
harness = false

[[bench]]
name = "example2"
harness = false